--- a/Flicks/Base.lproj/Main.storyboard
+++ b/Flicks/Base.lproj/Main.storyboard
@@ -76,7 +76,18 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Movies" id="Bwt-j2-TOm"/>
+                    <navigationItem key="navigationItem" title="Movies" id="Bwt-j2-TOm">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="9YC-Dw-BTO">
+                            <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="Nrd-ek-A34">
+                                <rect key="frame" x="278" y="8" width="81" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="List"/>
+                                    <segment title="Grid"/>
+                                </segments>
+                            </segmentedControl>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="networkErrorLabel" destination="2hy-mq-Har" id="zZj-bU-PcL"/>
                         <outlet property="networkErrorView" destination="cyH-jj-2Ui" id="IU7-uT-TLu"/>
